# comp440-team1-project

./: API_ENDPOINTS.org  README.org  project.code-workspace
backend/: .env.example  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  routers.py  schemas.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/blog/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  types.py
backend/app/comment/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/db/: dependencies.py
backend/app/follow/: models.py  router.py  schemas.py  service.py
backend/app/scripts/: blog_platform_blogs_01.json  blog_platform_blogs_02.json  blog_platform_blogs_03.json  blog_platform_blogs_04.json  blog_platform_blogs_05.json  blog_platform_blogs_06.json  blog_platform_blogs_07.json  blog_platform_blogs_08.json  blog_platform_blogs_09.json  blog_platform_blogs_10.json  blog_platform_mock_data.json  blog_platform_users.json  merge_mock_data.py  mock-data-prompt.txt  mock-data-schema-blogs.json  mock-data-schema-users.json  mock-data-schema.json  seed.py
backend/app/user/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/utils/: __init__.py  phone.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApiErrorCard.tsx  FilterBadge.tsx  ProtectedRoute.tsx  PublicRoute.tsx  TagEditor.tsx  TextWithBadges.tsx  theme-mode-toggle.tsx
(+72 files in other folders)
